objects/Account.object
<CustomObject><fields>
        <fullName>BOCES__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOCES</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Type</field>
                <operation>equals</operation>
                <value>BOCES</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>DIST_NUMBER__c</fullName>
        <label>Organization Code</label>
        <length>8</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Number_of_Students__c</fullName>
        <label>Number of Students</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>METRO REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH CENTRAL REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHEAST REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHWEST REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIKES PEAK REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTHEAST REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTHWEST REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST CENTRAL REGION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>SCHOOL_NUMBER__c</fullName>
        <label>School Code</label>
        <length>8</length>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>DIST_NUMBER__c</columns>
        <columns>SCHOOL_NUMBER__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Schools/Districts</label>
    </listViews><listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews></CustomObject>